--- a/package.json
+++ b/package.json
@@ -4,22 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "cross-env --max_old_space_size=4096 vite",
-    "serve": "npm dev",
+    "serve": "npm run dev",
     "build": "rimraf dist && cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "build:staging": "rimraf dist && cross-env vite build --mode staging",
     "report": "rimraf dist && cross-env vite build",
     "preview": "vite preview",
-    "preview:build": "npm build && vite preview",
+    "preview:build": "npm run build && vite preview",
     "typecheck": "tsc --noEmit && vue-tsc --noEmit --skipLibCheck",
     "cloc": "cross-env --max_old_space_size=4096 cloc . --exclude-dir=node_modules --exclude-lang=YAML",
-    "clean:cache": "rm -rf node_modules && rm -rf .eslintcache && npm install",
+    "clean:cache": "rm -rf node_modules && rm -rf .eslintcache && npm run install",
     "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,css,scss,postcss,less}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
-    "lint:pretty": "pretty-quick --staged",
-    "lint": "npm lint:eslint && npm lint:prettier && npm lint:stylelint",
-    "prepare": "husky install"
+    "lint": "npm run  lint:eslint && npm run  lint:prettier && npm run lint:stylelint"
   },
   "browserslist": [
     "> 1%",
@@ -84,8 +81,6 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
     "@faker-js/faker": "^7.4.0",
     "@iconify-icons/carbon": "^1.2.8",
     "@iconify-icons/ep": "^1.2.7",
@@ -123,15 +118,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.4.1",
     "font-awesome": "^4.7.0",
-    "husky": "^7.0.4",
-    "lint-staged": "11.1.2",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.16",
     "postcss-html": "^1.5.0",
     "postcss-import": "^14.1.0",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.5.1",
-    "pretty-quick": "3.1.1",
     "rimraf": "3.0.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.53.0",
