--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
   "Version": "3.4.6",
-  "Title": "PureAdmin",
+  "Title": "SuBoot",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
